syntax = "proto3";

message NewDeckRequest {}

message DeckResponse {
  Deck deck = 1;
}

message Deck {
  repeated Card c = 1;
}

message Card {
  string suit = 1;
  repeated uint32 values = 2;
  string cardType = 3;
}

service DeckService {
  rpc NewDeck (NewDeckRequest) returns (DeckResponse);
}